Gave moth quotes page a layout

--- a/fun/moth/quotes.html
+++ b/fun/moth/quotes.html
@@ -1,10 +1,8 @@
-<!doctype html><html lang=en><meta charset=utf-8>
-<meta name=color-scheme content=dark>
-<meta name=viewport content="width=device-width, initial-scale=1">
-<title>Moth Quotes</title>
-<main>
-
-<h1>Moth Quotes</h1>
+---
+title: Moth Quotes
+last_modified_at: 2023-04-16
+permalink: /fun/moth/quotes.html
+---
 Humourous moth-related dialogue which has occurred. More may be added later…
 <h2>The Players</h2>
 <dl>
@@ -38,6 +36,3 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <dt><abbr title=Viatrix>V</abbr>
 <dd>what did you expect from a moth-er
 </dl>
-
-</main>
-<footer><a href=https://mincerafter42.github.io>Return to Viatrix's home page</a></footer>
