Added more moth quotes

--- a/fun/moth/quotes.html
+++ b/fun/moth/quotes.html
@@ -1,6 +1,6 @@
 ---
 title: Moth Quotes
-last_modified_at: 2023-04-16
+last_modified_at: 2023-05-03
 permalink: /fun/moth/quotes.html
 ---
 Humourous moth-related dialogue which has occurred. More may be added later…
@@ -10,6 +10,15 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <dd>Alphonse (he/him), professional moth.
 <dt>V
 <dd>Viatrix (she|they), recreational moth.
+<dt>Y
+<dd>Alec (he/him), moth fan and proponent of "yuice".
+</dl>
+
+<h3>Guest-starring</h3>
+
+<dl>
+<dt>C
+<dd>CobyCat (he/him), in <a href=#coby>"The mothification of Coby"</a>.
 </dl>
 
 <h2 id=iceCream>Moth <abbr title=TransFormation>TF</abbr> Ice Cream</h2>
@@ -34,4 +43,132 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <br>Guys save me shes gonna take me out to Taco Bell
 <dt><abbr title=Viatrix>V</abbr>
 <dd>what did you expect from a moth-er
+</dl>
+
+<h2 id=art>Epic moth art</h2>
+<dl>
+<dt><abbr title=Alec>Y</abbr>
+<dd>I wanna draw the yuicing moth
+<dt><abbr title=Viatrix>V</abbr>
+<dd>👀
+<br>i would want to see the drawing if you drew it
+<dt><abbr title=Alec>Y</abbr>
+<dd>I am doing MS paint right now eheh
+<br>sup leporidot
+<br>toderan
+<br>I can't spell
+<dt><abbr title=Alec>Y</abbr>
+<dd>behold
+<br><details><summary>Image</summary><img src=yuice.png alt=": [A drawing of a moth sitting in a full water bowl labelled &quot;YUICE&quot;.]" width=980 height=768></details>
+<dt><abbr title=Viatrix>V</abbr>
+<dd>moth <strong>smol</strong>
+<dt><abbr title=Alphonse>A</abbr>
+<dd>It’s like a dog bowl lmao
+<dt><abbr title=Alec>Y</abbr>
+<dd>Exactly hahahahaha
+<dt><abbr title=Viatrix>V</abbr>
+<dd>into my moth art folder it goes ❤️
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Now Viatrix must draw the moth
+<dt><abbr title=Alec>Y</abbr>
+<dd>Yeeesss
+<dt><abbr title=Viatrix>V</abbr>
+<dd>what shall i draw the moth doing
+<dt><abbr title=Alec>Y</abbr>
+<dd>Eating pants
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Hugging Alec ❤️
+<br>VIATRIX AND ALEX GROUP HUG
+<dt><abbr title=Alec>Y</abbr>
+<dd>GROUP HUG!!!!!
+<dt><abbr title=Alphonse>A</abbr>
+<dd>GROUP HUGGGG
+<dt><abbr title=Viatrix>V</abbr>
+<dd>that would be great but i've already started drawing a moth eating pants 😅
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Oh well
+<br>I’m eating Alec’s pants
+<br>SKILL ISSUE
+<dt><abbr title=Viatrix>V</abbr>
+<dd>yum
+<br><details><summary>Image</summary><img src=eating-pants.png alt=": [A drawing of a moth at a table, holding a fork and knife, in front of a plate which has a pair of pants on it.]" width=640 height=480></details>
+<dt><abbr title=Alec>Y</abbr>
+<dd>CUTE
+<br>GOT THE PANT
+<br>READY TO GO
+<br>❤️
+<dt><abbr title=Viatrix>V</abbr>
+<dd>now alphonse must draw the moth >:)
+<dt><abbr title=Alphonse>A</abbr>
+<dd>I can't draw
+<dt><abbr title=Viatrix>V</abbr>
+<dd>have you considered: doing it anyway
+<dt><abbr title=Alphonse>A</abbr>
+<dd><details><summary>Image</summary><img src=mothspaint.png alt=": [A screenshot of Microsoft Paint, showing an image consisting only of the word &quot;Moth&quot;.]" width=1522 height=857><br></details>
+I drew moth
+<br>😛
+<dt><abbr title=Viatrix>V</abbr>
+<dd>lol
+<dt><abbr title=Alphonse>A</abbr>
+<dd>I AM AN ARTIST NOW
+<dt><abbr title=Alec>Y</abbr>
+<dd>Assemble!!!!!
+<br><details><summary>Image</summary><img src=moth-composite.png alt=": [The previous three images composited together.]" width=2024 height=820></details>
+<dt><abbr title=Alphonse>A</abbr>
+<dd>lmfao
+<br>Moths assemble!
+<br>Guys my moth is the greatest one there don't @ me
+</dl>
+
+<h2 id=sMOTHer2>The S<em>moth</em>ering of Alphonse, part 2</h2>
+<dl>
+<dt><abbr title=Viatrix>V</abbr>
+<dd>omg there is a moth driving a robot and the moth is <em>floof</em>
+<dt><abbr title=Alphonse>A</abbr>
+<dd>That robot is my war machine
+<br>Fear me Ж️
+<dt><abbr title=Viatrix>V</abbr>
+<dd>aww lookit the moth overlord with his fear-striking war machine
+<br>glompable
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Viatrix I will take over the world one day
+<br>Don’t underestimate me 😭
+<dt><abbr title=Viatrix>V</abbr>
+<dd>and then i will <abbr title="like a big hug.">glomp</abbr> you :p
+<dt><abbr title=Alphonse>A</abbr>
+<dd>NOOO YOULL MAKE MY EMPIRE FALL APART
+<dt><abbr title=Viatrix>V</abbr>
+<dd>how will glomping make your empire fall apart? :p
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Because everyone will see how much of a softie I am 🥹
+<dt><abbr title=Viatrix>V</abbr>
+<dd>but they can already see your soft floofy fur :p
+<dt><abbr title=Alphonse>A</abbr>
+<dd>😭
+<dt><abbr title=Viatrix>V</abbr>
+<dd>floofy and snuggable ruler of the world :3
+</dl>
+
+<h2 id=coby>The mothification of Coby</h2>
+<dl>
+<dt><abbr title=Alphonse>A</abbr>
+<dd>I will turn you into a moth, Coby 😛
+<dt><abbr title=Viatrix>V</abbr>
+<dd>mothification
+<dt><abbr title=Alphonse>A</abbr>
+<dd>COMMENCE THE MOTHIFICATION
+<dt><abbr title=Viatrix>V</abbr>
+<dd>ok coby, for the subsequent several seconds stay standing in that spot... and pay no mind to the mothification ray which happens to be pointed at the very same spot...
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Coby will be mothed
+<dt><abbr title=CobyCat>C</abbr>
+<dd>That seems like a suspiciously specific request, but okay. I am sure nothing life-altering will unexpectedly happen.
+<dt><abbr title=Viatrix>V</abbr>
+<dd><i>*ZAP*</i>
+<dt><abbr title=CobyCat>C</abbr>
+<dd><i>surprised moth noises</i>
+<dt><abbr title=Alphonse>A</abbr>
+<dd>Did he get mothed?
+<dt><abbr title=CobyCat>C</abbr> (now with the username MobyMoth)
+<dd>I don't notice anything different.
 </dl>
