--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: none
-last_modified_at: 2022-09-16
+last_modified_at: 2023-05-08
 ---
 <!DOCTYPE html>
 <html lang=en>
@@ -94,11 +94,11 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 </div>
 <iframe width=330 height=90 src="https://go.KIBI.family/WebRings/💀💖/embed/#/mincerafter42" sandbox="allow-scripts allow-same-origin allow-top-navigation" style="border:18pt solid;border-color:#f3ecff #c7c2d1 #c7c2d1 #f3ecff;background-color:#dedbd9;margin:8pt"></iframe>
 <div class="transring outset">
-<a href=https://sugarforbrains.neocities.org/transring/index.html><img src=assets/transring/webringbutton.png alt="Transing The Internet Webring" width=168 height=39 style=padding:2px></a><br>
+<a href=https://transring.neocities.org><img src=assets/transring/webringbutton.png alt="Transing The Internet Webring" width=168 height=39 style=padding:2px></a><br>
 <iframe width=168 height=24 style=border:0 srcdoc="
 <style>body{margin:0;color:#fff;display:flex;justify-content:space-evenly}img{display:block}a:hover img,a:focus img{background-color:#ff28ff}</style><body>
 <noscript>But without Javascript, it's just a web list.</noscript>
-<script src=https://sugarforbrains.neocities.org/transring/onionring-variables.js></script>
+<script src=https://transring.neocities.org/onionring-variables.js></script>
 <script>var selfIndex = sites.indexOf('https://mincerafter42.github.io');
 document.write(`<a href='${sites[(selfIndex||sites.length)-1]}' target=_parent><img src=assets/transring/arrowleft.png alt='${ringName} previous'></a>`);
 document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><img src=assets/transring/arrowright.png alt='${ringName} next'></a>`);</script>
