--- a/assets/banner728x90.html
+++ b/assets/banner728x90.html
@@ -8,5 +8,5 @@ Don't you know an ad-blocker stops annoying ads and malicious code?
 I, Viatrix the Internet Rando Extraordinaire, recommend uBlock Origin!
 (Free, Libre, and Open-Source)">
 <map name=map>
-<area shape=circle coords=682,45,40 href=https://github.com/gorhill/uBlock#ublock-origin target=_parent alt="Get uBlock Origin">
+<area shape=circle coords=682,45,40 href=https://github.com/gorhill/uBlock#ublock-origin-ubo target=_parent alt="Get uBlock Origin">
 </map>
