Added Moth Zone

--- a/fun/index.html
+++ b/fun/index.html
@@ -50,4 +50,6 @@ Look at our cool e-mail client!
 — Mozilla"></figure>
 <figure><img src=moon.svg width=400 height=240 alt="An animated comparison of the moon's phases with its phases in ‘Sailor Moon’: ‘Sailor Moon’'s is always either full or an impossible crescent"></figure>
 
+<figure><img src=moth/moth⅙.png alt="Moth!"><figcaption>Many moths are in <a href=moth>The Moth Zone</a></figcaption></figure>
+
 </main>
