--- a/fun/moth/index.html
+++ b/fun/moth/index.html
@@ -9,7 +9,7 @@ document.addEventListener('DOMContentLoaded',function() {
 	document.getElementsByClassName('ref72')[0].style.display=null;
 	
 	// add "just like you!" to nocturnal paragraph if viewer is awake at night
-	if ((new Date().getHours()+4)%24<10) document.getElementsByClassName('nocturnal')[0].innerText+=' Just like you!'
+	if ((new Date().getHours()+3)%24<9) document.getElementsByClassName('nocturnal')[0].innerText+=' Just like you!'
 	
 	// put diæresifyer on page only if browser supports javascript
 	if(!String.prototype.normalize) String.prototype.normalize=function() {return this}; //polyfill
@@ -158,6 +158,9 @@ When butterflies are at rest, their wings tend to point upward, while moths at r
 <ul>
 <li><a href=quotes.html>Moth dialogues between myself and friends</a>
 <li><a href="https://www.youtube.com/embed/qGwnjFUHISU?rel=0&modestbranding=1">Disco moth (YouTube)</a>
+<li><a href="https://www.youtube.com/embed/d8t27M66ESA?rel=0&modestbranding=1&end=49">Moth driving a robot (YouTube)</a>
+<!-- todo: find out if the process of putting it in the robot is harming the moth; remove that video if so -->
+<li><a href=https://mailman.yale.edu/mailman/listinfo/leps-l>Lepidoptera Listserver</a>
 </ul>
 </article>
 </main>
