DJ Chase got the ISO 8601 award

--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -33,6 +33,7 @@ See which sites have accepted the award!
 <li><a href=https://tomxcd.me/>tomxcd</a> — Awarded 30/19/22
 <li><a href=https://sword-of-stabbing.neocities.org>sword-of-stabbing</a> — Awarded 32/14/22
 <li><a href=https://bytemoth.neocities.org>Bytemoth's Brook</a> — Awarded 13/27/23
+<li><a href=https://dj-chase.com/>DJ Chase’s Site</a> — Awarded 21/16/23
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
