Added question to gay quiz

--- a/gayquiz/index.html
+++ b/gayquiz/index.html
@@ -15,6 +15,10 @@ If you're wondering whether you're gay, this is the quiz to take!
 <label><input name=q2 type=radio required> homogenized</label><br>
 <label><input name=q2 type=radio> homosapiens</label><br>
 <label><input name=q2 type=radio> homophonous</label>
+<h2>What is a pronoun?</h2>
+<label><input name=q7 type=radio required> A part of speech which takes the place of a noun</label><br>
+<label><input name=q7 type=radio> A made-up word, made up in the 15th century</label><br>
+<label><input name=q7 type=radio> It is</label>
 <h2>You are alone playing a Yamaha synthesizer of your choice. Which model is it?</h2>
 <label><input name=q5 type=radio required> SHS-10</label><br>
 <label><input name=q5 type=radio> CS-80</label><br>
