Added color-scheme meta to gay quiz

--- a/gayquiz/index.html
+++ b/gayquiz/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang=en>
 <meta charset=utf-8>
+<meta name=color-scheme content="light dark">
 <title>Gay Quiz</title>
 <meta name=description content="If you're wondering whether you're gay, this is the quiz to take!">
 <main>
