--- a/gayquiz/result.html
+++ b/gayquiz/result.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang=en>
 <meta charset=utf-8>
+<meta name=color-scheme content="light dark">
 <title>Gay Quiz Results</title>
 <main>
 <h1>🏳️‍🌈You're gay!🏳️‍🌈</h1>
 <p>This is a joke quiz, as you may have been able to tell. It says you're gay no matter what you answer :p
 <h2>Share your "results"</h2>
 Upload the image of your choice to your website and add the HTML code:<br>
-<a href=resultlight.png download><img src=resultlight.png alt="Light background"></a><a href=resultdark.png download><img src=resultdark.png alt="Dark background"></a><br>
+<a href=resultlight.png download><img src=resultlight.png alt="Light background"></a>
+<a href=resultdark.png download><img src=resultdark.png alt="Dark background"></a><br>
 <pre><code>&lt;a href=https://mincerafter42.github.io/gayquiz/&gt;
 	&lt;img src=<b>YOUR_IMAGE_URL_HERE</b> alt="I'm GAY! Find out whether you're gay with THE GAY QUIZ!"&gt;
 &lt;/a&gt;
