Updated label info

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 title: About Me
 layout: default
+last_modified_at: 2023-07-24
 ---
 <h1>About the webmaster</h1>
 <p id=name>
@@ -11,7 +12,7 @@ I'm also known as mincerafter42 on other platforms, so you can call me minceraft
 <p>
 My pronouns are she|they.
 I'm <abbr title="experiencing no sexual attraction">asexual</abbr> and <abbr title="experiencing no romantic attraction">aromantic</abbr>.<br>
-I'm a <abbr title="partially girl">demigirl</abbr>, putting me under the <abbr title="Being neither 100% male 100% of the time nor 100% female 100% of the time">non-binary</abbr> and <abbr title="being a gender other than what you were assigned at birth (because people make assumptions about babies' genders before the babies even know gender is a thing)">trans</abbr> umbrellas.
+I'm <abbr title="Being neither 100% male 100% of the time nor 100% female 100% of the time">non-binary</abbr> and <abbr title="being a gender other than what you were assigned at birth (because people make assumptions about babies' genders before the babies even know gender is a thing)">trans</abbr>. (Yes there is overlap between these labels)
 <br><a href=/labels>More about my titles and labels</a>
 <br>I'm <abbr title="brain functions differently from majority">neurodivergent</abbr>.
 <p>
