Removed link to missing content

--- a/fun/index.html
+++ b/fun/index.html
@@ -27,7 +27,7 @@ Easy-going and of raw energy. You tend to be close to the earth. You are extreme
 <a href=kkaq.html>The results of Ruby Klover's Awkward Questionnaire</a>
 
 <figure><img src=../assets/cakes.jpg alt="Free cakes in your area
-Sign up now!!" width=336 height=280><figcaption>Inspired by my <a href=/labels#aro-spec>comparison of romance to free cake</a></figcaption></figure>
+Sign up now!!" width=336 height=280></figure>
 <figure><img src=../assets/burma-shive.png alt="Our server has
 an odd statistic:
 Every channel
