Updated Altair's name and Alec's pronouns

--- a/fun/moth/quotes.html
+++ b/fun/moth/quotes.html
@@ -7,11 +7,11 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <h2>The Players</h2>
 <dl>
 <dt>A
-<dd>Alphonse (he/him), professional moth.
+<dd>Altair (he/him), professional moth. Also called "Alphonse" in some quotes.
 <dt>V
 <dd>Viatrix (she|they), recreational moth.
 <dt>Y
-<dd>Alec (he/him), moth fan and proponent of "yuice".
+<dd>Alec (any pronouns), moth fan and proponent of "yuice".
 </dl>
 
 <h3>Guest-starring</h3>
@@ -30,14 +30,14 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <dd>alphonse, i ate your ice cream and now i'm a moth! you lied! ignore the fact i was a moth before eating the ice cream
 </dl>
 
-<h2 id=sMOTHer>The S<em>moth</em>ering of Alphonse</h2>
+<h2 id=sMOTHer>The S<em>moth</em>ering of Altair</h2>
 <dl>
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>"It is I, the moth overlord!"
 <dt><abbr title=Viatrix>V</abbr>
 <dd><audio controls src=viatrix1.mp3><a href=viatrix1.mp3>[Listen to audio]</a></audio>
 <dd>"Who's the moth overlord~? Is it you~? Is it you~? Yes it is~! Moth overlord~! Moth moth moth~! Mothy."
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Madam
 <br>You sound like a mom fr
 <br>Guys save me shes gonna take me out to Taco Bell
@@ -62,13 +62,13 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <br><details><summary>Image</summary><img src=yuice.png alt=": [A drawing of a moth sitting in a full water bowl labelled &quot;YUICE&quot;.]" width=980 height=768></details>
 <dt><abbr title=Viatrix>V</abbr>
 <dd>moth <strong>smol</strong>
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>It’s like a dog bowl lmao
 <dt><abbr title=Alec>Y</abbr>
 <dd>Exactly hahahahaha
 <dt><abbr title=Viatrix>V</abbr>
 <dd>into my moth art folder it goes ❤️
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Now Viatrix must draw the moth
 <dt><abbr title=Alec>Y</abbr>
 <dd>Yeeesss
@@ -76,16 +76,16 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <dd>what shall i draw the moth doing
 <dt><abbr title=Alec>Y</abbr>
 <dd>Eating pants
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Hugging Alec ❤️
 <br>VIATRIX AND ALEX GROUP HUG
 <dt><abbr title=Alec>Y</abbr>
 <dd>GROUP HUG!!!!!
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>GROUP HUGGGG
 <dt><abbr title=Viatrix>V</abbr>
 <dd>that would be great but i've already started drawing a moth eating pants 😅
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Oh well
 <br>I’m eating Alec’s pants
 <br>SKILL ISSUE
@@ -99,51 +99,51 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <br>❤️
 <dt><abbr title=Viatrix>V</abbr>
 <dd>now alphonse must draw the moth >:)
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>I can't draw
 <dt><abbr title=Viatrix>V</abbr>
 <dd>have you considered: doing it anyway
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd><details><summary>Image</summary><img src=mothspaint.png alt=": [A screenshot of Microsoft Paint, showing an image consisting only of the word &quot;Moth&quot;.]" width=1522 height=857><br></details>
 I drew moth
 <br>😛
 <dt><abbr title=Viatrix>V</abbr>
 <dd>lol
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>I AM AN ARTIST NOW
 <dt><abbr title=Alec>Y</abbr>
 <dd>Assemble!!!!!
 <br><details><summary>Image</summary><img src=moth-composite.png alt=": [The previous three images composited together.]" width=2024 height=820></details>
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>lmfao
 <br>Moths assemble!
 <br>Guys my moth is the greatest one there don't @ me
 </dl>
 
-<h2 id=sMOTHer2>The S<em>moth</em>ering of Alphonse, part 2</h2>
+<h2 id=sMOTHer2>The S<em>moth</em>ering of Altair, part 2</h2>
 <dl>
 <dt><abbr title=Viatrix>V</abbr>
 <dd>omg there is a moth driving a robot and the moth is <em>floof</em>
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>That robot is my war machine
 <br>Fear me Ж️
 <dt><abbr title=Viatrix>V</abbr>
 <dd>aww lookit the moth overlord with his fear-striking war machine
 <br>glompable
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Viatrix I will take over the world one day
 <br>Don’t underestimate me 😭
 <dt><abbr title=Viatrix>V</abbr>
 <dd>and then i will <abbr title="like a big hug.">glomp</abbr> you :p
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>NOOO YOULL MAKE MY EMPIRE FALL APART
 <dt><abbr title=Viatrix>V</abbr>
 <dd>how will glomping make your empire fall apart? :p
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Because everyone will see how much of a softie I am 🥹
 <dt><abbr title=Viatrix>V</abbr>
 <dd>but they can already see your soft floofy fur :p
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>😭
 <dt><abbr title=Viatrix>V</abbr>
 <dd>floofy and snuggable ruler of the world :3
@@ -151,15 +151,15 @@ I drew moth
 
 <h2 id=coby>The mothification of Coby</h2>
 <dl>
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>I will turn you into a moth, Coby 😛
 <dt><abbr title=Viatrix>V</abbr>
 <dd>mothification
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>COMMENCE THE MOTHIFICATION
 <dt><abbr title=Viatrix>V</abbr>
 <dd>ok coby, for the subsequent several seconds stay standing in that spot... and pay no mind to the mothification ray which happens to be pointed at the very same spot...
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Coby will be mothed
 <dt><abbr title=CobyCat>C</abbr>
 <dd>That seems like a suspiciously specific request, but okay. I am sure nothing life-altering will unexpectedly happen.
@@ -167,7 +167,7 @@ I drew moth
 <dd><i>*ZAP*</i>
 <dt><abbr title=CobyCat>C</abbr>
 <dd><i>surprised moth noises</i>
-<dt><abbr title=Alphonse>A</abbr>
+<dt><abbr title=Altair>A</abbr>
 <dd>Did he get mothed?
 <dt><abbr title=CobyCat>C</abbr> (now with the username MobyMoth)
 <dd>I don't notice anything different.
