--- a/cuddle/jukebox/index.html
+++ b/cuddle/jukebox/index.html
@@ -1,20 +1,176 @@
 <!doctype html><html lang=en><meta charset=utf-8>
+<style>
+@import url(https://fonts.bunny.net/css?family=jost:500,700,900);
+body {
+	color: #fff;
+	background-color: #000;
+	margin: 0;
+	display: flex;
+	min-height: 100vh;
+}
+.jukebox {
+	max-width: 100%;
+	width: 600px;
+	text-align: center;
+	margin: auto;
+	font-family: 'Jost', sans-serif;
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 16px;
+}
+.jukebox-top, .jukebox-select {
+	background-color: #420;
+	border-style: solid;
+	border-color: #c6f;
+}
+.jukebox-top {
+	margin: 6px 6px 0;
+	border-width: 74px 74px 0;
+	border-radius: 300px 300px 0 0;
+	border-image: radial-gradient(farthest-side, transparent 75%, #729 75%, #fcf, #729 100%, transparent 100%) 49.99% / 300px 300px 0;
+	padding: 20px 20px 10px;
+	position: relative;
+}
+.jukebox-top::before {
+	content: "";
+	background-image: url(top-ornament.png);
+	background-size: contain;
+	width: 92px;
+	height: 84px;
+	position: absolute;
+	top: -81px;
+	left: calc(50% - 46px);
+}
+.jukebox-top h1 {
+	margin: 0;
+	font-size: 16px;
+}
+.jukebox-top img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: top;
+}
+.jukebox-top iframe {
+	border: 0;
+	vertical-align:middle;
+	max-width: 100%;
+	position: relative;
+	/*background-image: url(jukebox-on.png);*/
+}
+.jukebox-offs {
+	background-color: #ccc;
+	color: #111;
+	padding: 5px;
+	border-width: 0 85px;
+	border-style: solid;
+}
+.jukebox-bar {
+	border-color: #666;
+	border-image: repeating-linear-gradient(#666, #eee, #333 33.3%) 0.1%;
+}
+.jukebox-smoltext {
+	font-size: 8px;
+}
+.jukebox-smoltext a:hover, .jukebox-smoltext a:focus, .jukebox-smoltext a:active {
+	font-weight: 700;}
+.cancelsong {
+	font-weight: 900;
+	color: #cc0;
+	background-color: #400;
+	text-decoration: none;
+	padding: 0 5px;
+	border: 2px solid;
+	border-color: #fff #666 #666 #fff;
+	border-radius: 16px;
+	display: inline-block;
+}
+.cancelsong:hover, .cancelsong:focus, .cancelsong:active {
+	background-color: #f20;
+	color: #ff3;
+}
+.jukebox-select {
+	margin: 0 6px;
+	border-width: 0 74px;
+	border-image: repeating-linear-gradient(90deg, #729, #fcf, #729 33.3%) 33.3%;
+	padding: 20px;
+	font-weight: 700;
+}
+.songs {
+	margin: -10px 0;
+	padding: 0;
+}
+.songs li {
+	display: block;
+	background-color: #ffc;
+	position: relative;
+	margin: 10px 0;
+}
+.songs a {
+	color: #000;
+	text-decoration: none;
+	display: block;
+	padding: 0 18px;
+}
+.songs a::before, .songs a::after {
+	content: "";
+	padding: 9px;
+	background-color: #400;
+	position: absolute;
+	top: calc(50% - 12px);
+	border-radius: 12px;
+	border: 3px #ccc ridge;
+	z-index: 1;
+}
+.songs a::before {left: -8px}
+.songs a::after {right: -8px}
+.songs a:hover::before, .songs a:hover::after, .songs a:focus::before, .songs a:focus::after, .songs a:active::before, .songs a:active::after {
+	background-color: #f10;
+	background: radial-gradient(#ff6, #f10 70%);
+}
+.songs i, .songs small {
+	font-style:normal;
+	display: block;
+}
+.jukebox-bottom {
+	border-color: #110;
+}
+@media (max-width: 599px) {
+	.jukebox-top {border-width: 12.3vw 12.3vw 0;padding: 3.33vw 3.33vw 1.67vw;margin:1vw 1vw 0}
+	.jukebox-top iframe {height: 16.7vw}
+	.jukebox-top::before {
+		width: 15.3vw;
+		height: 14vw;
+		top: -13.5vw;
+		left: calc(50% - 7.67vw);
+	}
+	.jukebox-offs {border-width: 0 14.1vw}
+	.jukebox-select {border-width: 0 12.3vw;padding: 3.33vw;margin: 0 1vw}
+}
+@media (max-width: 300px) {
+	.jukebox-select {padding: 10px}
+}
+</style>
 <title>The Cuddle Jukebox</title>
-<header>
-<h1>The Cuddle Jukebox</h1>
-<p>Presented by <a href=..>Viatrix's cuddle page</a>.
-For the best experience, use a browser which supports <b>frames</b> and <b>inline video</b>.
-<p>Yes, the page doesn't look very appealing right now. I'll add CSS sometime.
-</header>
+<div class=jukebox>
 <main>
-<ul>
-<li><a href=nosong.html target=currentsong>Cancel current song</a>
-<li><a href=a-cup-of-coffee-a-sandwich-and-you.html target=currentsong><i>A Cup of Coffee, a Sandwich, and You</i> (Nick Lucas)</a>
-<li><a href=cuddle-me.html target=currentsong><i>Cuddle Me</i> (Ronnie Gaylord)</a>
-<li><a href=cuddle-up-a-little-closer.html target=currentsong><i>Cuddle Up a Little Closer, Lovey Mine</i> (Kay Armen And The Balladiers)</a>
+<div class=jukebox-top>
+<h1><img alt="The Cuddle Jukebox" width=400 height=100 src=jukebox-plaque.png></h1>
+<iframe name=currentsong width=400 height=100 src=nosong.html></iframe>
+</div>
+<div class="jukebox-bar jukebox-offs">
+<div class=jukebox-smoltext>Presented by <a href=..>Viatrix's cuddle page</a>. Select a song to play it.
+For best experience, use a browser which supports <b>inline frames</b> and <b>inline audiovideo</b>.</div>
+<nav><a class=cancelsong href=nosong.html target=currentsong>Cancel current song</a></nav>
+</div>
+<nav class=jukebox-select>
+<ul class=songs>
+<li><a href=a-cup-of-coffee-a-sandwich-and-you.html target=currentsong><i>A Cup of Coffee, a Sandwich, &amp; You</i> <small>(Nick Lucas / 1926)</small></a>
+<li><a href=cuddle-me.html target=currentsong><i>Cuddle Me</i> <small>(Ronnie Gaylord / 1954)</small></a>
+<li><a href=cuddle-up-a-little-closer.html target=currentsong><i>Cuddle Up a Little Closer, Lovey Mine</i> <small>(Kay Armen &amp; The Balladiers / 1943)</small></a>
 </ul>
-<iframe name=currentsong width=400 height=400 src=nosong.html></iframe>
+</nav>
 </main>
-<footer>
-<a href=/index.html>Return to Viatrix's home page</a>
+<footer class="jukebox-bottom jukebox-offs jukebox-smoltext">
+Last modified <time>2023-09-28</time>. <a href=/index.html>Return to Viatrix's home page</a>
 </footer>
+</div>
