--- a/cuddle/jukebox/nosong.html
+++ b/cuddle/jukebox/nosong.html
@@ -1,4 +1,4 @@
 <!doctype html><html lang=en><meta charset=utf-8>
 <title>No song selected</title>
-<h1>No song selected</h1>
-Select a song to play it.
+<body style=margin:0>
+<img width=400 height=100 alt="No song selected." src=jukebox-off.png style="display:block;width:100%;height:100%">
