Added credits in cuddle jukebox CSS in case anyone goes poking around there

--- a/cuddle/jukebox/index.html
+++ b/cuddle/jukebox/index.html
@@ -1,6 +1,7 @@
 <!doctype html><html lang=en><meta charset=utf-8>
 <style>
 @import url(https://fonts.bunny.net/css?family=jost:500,700,900);
+/* CSS by https://mincerafter42.github.io */
 body {
 	color: #fff;
 	background-color: #000;
