--- a/cuddle/jukebox/index.html
+++ b/cuddle/jukebox/index.html
@@ -1,4 +1,5 @@
 <!doctype html><html lang=en><meta charset=utf-8>
+<meta name=viewport content="width=600, initial-scale=1">
 <style>
 @import url(https://fonts.bunny.net/css?family=jost:500,700,900);
 /* CSS by https://mincerafter42.github.io */
@@ -39,7 +40,7 @@ body {
 	width: 92px;
 	height: 84px;
 	position: absolute;
-	top: -81px;
+	top: -80px;
 	left: calc(50% - 46px);
 }
 .jukebox-top h1 {
