--- a/cuddle/jukebox/index.html
+++ b/cuddle/jukebox/index.html
@@ -175,3 +175,6 @@ For best experience, use a browser which supports <b>inline frames</b> and <b>in
 Last modified <time>2023-09-29</time>. <a href=/index.html>Return to Viatrix's home page</a>
 </footer>
 </div>
+<script><!--
+// fix for Safari not autoplaying
+document.getElementsByName('currentsong')[0].addEventListener('load',function(){const video=this.contentDocument.getElementsByTagName('video')[0]||0;if (video.paused) video.play()})//--></script>
