--- a/fun/8601award.html
+++ b/fun/8601award.html
@@ -35,6 +35,7 @@ See which sites have accepted the award!
 <li><a href=https://bytemoth.neocities.org>Bytemoth's Brook</a> — Awarded 13/27/23
 <li><a href=https://dj-chase.com/>DJ Chase’s Site</a> — Awarded 21/16/23
 <li><a href=https://blog.darylsun.page/>Daryl Sun's Journal</a> — Awarded 22/20/23
+<li><a href=https://msx.gay/>msx.gay</a> — Awarded 29/22/23
 </ul>
 <h2>Can I get the award?</h2>
 <p>If you want the award for yourself, or for another's website, you can <a href=/contact>contact me</a> and ask. Make sure to link to the website!
