Changed quote markup after learning <dl> is not good for transcripts

--- a/fun/moth/quotes.html
+++ b/fun/moth/quotes.html
@@ -22,153 +22,89 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 </dl>
 
 <h2 id=iceCream>Moth <abbr title=TransFormation>TF</abbr> Ice Cream</h2>
-<dl>
-<dt><abbr title=Alphonse>A</abbr>
-<dd>I will give you ice cream ❤️
+<p><abbr title=Alphonse>A</abbr>: I will give you ice cream ❤️
 <br>Do not resist, it will totally not make you a moth
-<dt><abbr title=Viatrix>V</abbr>
-<dd>alphonse, i ate your ice cream and now i'm a moth! you lied! ignore the fact i was a moth before eating the ice cream
-</dl>
+<p><abbr title=Viatrix>V</abbr>: alphonse, i ate your ice cream and now i'm a moth! you lied! ignore the fact i was a moth before eating the ice cream
 
 <h2 id=sMOTHer>The S<em>moth</em>ering of Altair</h2>
-<dl>
-<dt><abbr title=Altair>A</abbr>
-<dd>"It is I, the moth overlord!"
-<dt><abbr title=Viatrix>V</abbr>
-<dd><audio controls src=viatrix1.mp3><a href=viatrix1.mp3>[Listen to audio]</a></audio>
-<dd>"Who's the moth overlord~? Is it you~? Is it you~? Yes it is~! Moth overlord~! Moth moth moth~! Mothy."
-<dt><abbr title=Altair>A</abbr>
-<dd>Madam
+<p><abbr title=Altair>A</abbr>: "It is I, the moth overlord!"
+<p><abbr title=Viatrix>V</abbr>: <audio controls src=viatrix1.mp3><a href=viatrix1.mp3>[Listen to audio]</a></audio>
+<br>"Who's the moth overlord~? Is it you~? Is it you~? Yes it is~! Moth overlord~! Moth moth moth~! Mothy."
+<p><abbr title=Altair>A</abbr>: Madam
 <br>You sound like a mom fr
 <br>Guys save me shes gonna take me out to Taco Bell
-<dt><abbr title=Viatrix>V</abbr>
-<dd>what did you expect from a moth-er
-</dl>
+<p><abbr title=Viatrix>V</abbr>: what did you expect from a moth-er
 
 <h2 id=art>Epic moth art</h2>
-<dl>
-<dt><abbr title=Alec>Y</abbr>
-<dd>I wanna draw the yuicing moth
-<dt><abbr title=Viatrix>V</abbr>
-<dd>👀
+<p><abbr title=Alec>Y</abbr>: I wanna draw the yuicing moth
+<p><abbr title=Viatrix>V</abbr>: 👀
 <br>i would want to see the drawing if you drew it
-<dt><abbr title=Alec>Y</abbr>
-<dd>I am doing MS paint right now eheh
+<p><abbr title=Alec>Y</abbr>: I am doing MS paint right now eheh
 <br>sup leporidot
 <br>toderan
 <br>I can't spell
-<dt><abbr title=Alec>Y</abbr>
-<dd>behold
+<p><abbr title=Alec>Y</abbr>: behold
 <br><details><summary>Image</summary><img src=yuice.png alt=": [A drawing of a moth sitting in a full water bowl labelled &quot;YUICE&quot;.]" width=980 height=768></details>
-<dt><abbr title=Viatrix>V</abbr>
-<dd>moth <strong>smol</strong>
-<dt><abbr title=Altair>A</abbr>
-<dd>It’s like a dog bowl lmao
-<dt><abbr title=Alec>Y</abbr>
-<dd>Exactly hahahahaha
-<dt><abbr title=Viatrix>V</abbr>
-<dd>into my moth art folder it goes ❤️
-<dt><abbr title=Altair>A</abbr>
-<dd>Now Viatrix must draw the moth
-<dt><abbr title=Alec>Y</abbr>
-<dd>Yeeesss
-<dt><abbr title=Viatrix>V</abbr>
-<dd>what shall i draw the moth doing
-<dt><abbr title=Alec>Y</abbr>
-<dd>Eating pants
-<dt><abbr title=Altair>A</abbr>
-<dd>Hugging Alec ❤️
+<p><abbr title=Viatrix>V</abbr>: moth <strong>smol</strong>
+<p><abbr title=Altair>A</abbr>: It’s like a dog bowl lmao
+<p><abbr title=Alec>Y</abbr>: Exactly hahahahaha
+<p><abbr title=Viatrix>V</abbr>: into my moth art folder it goes ❤️
+<p><abbr title=Altair>A</abbr>: Now Viatrix must draw the moth
+<p><abbr title=Alec>Y</abbr>: Yeeesss
+<p><abbr title=Viatrix>V</abbr>: what shall i draw the moth doing
+<p><abbr title=Alec>Y</abbr>: Eating pants
+<p><abbr title=Altair>A</abbr>: Hugging Alec ❤️
 <br>VIATRIX AND ALEX GROUP HUG
-<dt><abbr title=Alec>Y</abbr>
-<dd>GROUP HUG!!!!!
-<dt><abbr title=Altair>A</abbr>
-<dd>GROUP HUGGGG
-<dt><abbr title=Viatrix>V</abbr>
-<dd>that would be great but i've already started drawing a moth eating pants 😅
-<dt><abbr title=Altair>A</abbr>
-<dd>Oh well
+<p><abbr title=Alec>Y</abbr>: GROUP HUG!!!!!
+<p><abbr title=Altair>A</abbr>: GROUP HUGGGG
+<p><abbr title=Viatrix>V</abbr>: that would be great but i've already started drawing a moth eating pants 😅
+<p><abbr title=Altair>A</abbr>: Oh well
 <br>I’m eating Alec’s pants
 <br>SKILL ISSUE
-<dt><abbr title=Viatrix>V</abbr>
-<dd>yum
+<p><abbr title=Viatrix>V</abbr>: yum
 <br><details><summary>Image</summary><img src=eating-pants.png alt=": [A drawing of a moth at a table, holding a fork and knife, in front of a plate which has a pair of pants on it.]" width=640 height=480></details>
-<dt><abbr title=Alec>Y</abbr>
-<dd>CUTE
+<p><abbr title=Alec>Y</abbr>: CUTE
 <br>GOT THE PANT
 <br>READY TO GO
 <br>❤️
-<dt><abbr title=Viatrix>V</abbr>
-<dd>now alphonse must draw the moth >:)
-<dt><abbr title=Altair>A</abbr>
-<dd>I can't draw
-<dt><abbr title=Viatrix>V</abbr>
-<dd>have you considered: doing it anyway
-<dt><abbr title=Altair>A</abbr>
-<dd><details><summary>Image</summary><img src=mothspaint.png alt=": [A screenshot of Microsoft Paint, showing an image consisting only of the word &quot;Moth&quot;.]" width=1522 height=857><br></details>
+<p><abbr title=Viatrix>V</abbr>: now alphonse must draw the moth >:)
+<p><abbr title=Altair>A</abbr>: I can't draw
+<p><abbr title=Viatrix>V</abbr>: have you considered: doing it anyway
+<p><abbr title=Altair>A</abbr>: <details><summary>Image</summary><img src=mothspaint.png alt=": [A screenshot of Microsoft Paint, showing an image consisting only of the word &quot;Moth&quot;.]" width=1522 height=857><br></details>
 I drew moth
 <br>😛
-<dt><abbr title=Viatrix>V</abbr>
-<dd>lol
-<dt><abbr title=Altair>A</abbr>
-<dd>I AM AN ARTIST NOW
-<dt><abbr title=Alec>Y</abbr>
-<dd>Assemble!!!!!
+<p><abbr title=Viatrix>V</abbr>: lol
+<p><abbr title=Altair>A</abbr>: I AM AN ARTIST NOW
+<p><abbr title=Alec>Y</abbr>: Assemble!!!!!
 <br><details><summary>Image</summary><img src=moth-composite.png alt=": [The previous three images composited together.]" width=2024 height=820></details>
-<dt><abbr title=Altair>A</abbr>
-<dd>lmfao
+<p><abbr title=Altair>A</abbr>: lmfao
 <br>Moths assemble!
 <br>Guys my moth is the greatest one there don't @ me
-</dl>
 
 <h2 id=sMOTHer2>The S<em>moth</em>ering of Altair, part 2</h2>
-<dl>
-<dt><abbr title=Viatrix>V</abbr>
-<dd>omg there is a moth driving a robot and the moth is <em>floof</em>
-<dt><abbr title=Altair>A</abbr>
-<dd>That robot is my war machine
+<p><abbr title=Viatrix>V</abbr>: omg there is a moth driving a robot and the moth is <em>floof</em>
+<p><abbr title=Altair>A</abbr>: That robot is my war machine
 <br>Fear me Ж️
-<dt><abbr title=Viatrix>V</abbr>
-<dd>aww lookit the moth overlord with his fear-striking war machine
+<p><abbr title=Viatrix>V</abbr>: aww lookit the moth overlord with his fear-striking war machine
 <br>glompable
-<dt><abbr title=Altair>A</abbr>
-<dd>Viatrix I will take over the world one day
+<p><abbr title=Altair>A</abbr>: Viatrix I will take over the world one day
 <br>Don’t underestimate me 😭
-<dt><abbr title=Viatrix>V</abbr>
-<dd>and then i will <abbr title="like a big hug.">glomp</abbr> you :p
-<dt><abbr title=Altair>A</abbr>
-<dd>NOOO YOULL MAKE MY EMPIRE FALL APART
-<dt><abbr title=Viatrix>V</abbr>
-<dd>how will glomping make your empire fall apart? :p
-<dt><abbr title=Altair>A</abbr>
-<dd>Because everyone will see how much of a softie I am 🥹
-<dt><abbr title=Viatrix>V</abbr>
-<dd>but they can already see your soft floofy fur :p
-<dt><abbr title=Altair>A</abbr>
-<dd>😭
-<dt><abbr title=Viatrix>V</abbr>
-<dd>floofy and snuggable ruler of the world :3
-</dl>
+<p><abbr title=Viatrix>V</abbr>: and then i will <abbr title="like a big hug.">glomp</abbr> you :p
+<p><abbr title=Altair>A</abbr>: NOOO YOULL MAKE MY EMPIRE FALL APART
+<p><abbr title=Viatrix>V</abbr>: how will glomping make your empire fall apart? :p
+<p><abbr title=Altair>A</abbr>: Because everyone will see how much of a softie I am 🥹
+<p><abbr title=Viatrix>V</abbr>: but they can already see your soft floofy fur :p
+<p><abbr title=Altair>A</abbr>: 😭
+<p><abbr title=Viatrix>V</abbr>: floofy and snuggable ruler of the world :3
 
 <h2 id=coby>The mothification of Coby</h2>
-<dl>
-<dt><abbr title=Altair>A</abbr>
-<dd>I will turn you into a moth, Coby 😛
-<dt><abbr title=Viatrix>V</abbr>
-<dd>mothification
-<dt><abbr title=Altair>A</abbr>
-<dd>COMMENCE THE MOTHIFICATION
-<dt><abbr title=Viatrix>V</abbr>
-<dd>ok coby, for the subsequent several seconds stay standing in that spot... and pay no mind to the mothification ray which happens to be pointed at the very same spot...
-<dt><abbr title=Altair>A</abbr>
-<dd>Coby will be mothed
-<dt><abbr title=CobyCat>C</abbr>
-<dd>That seems like a suspiciously specific request, but okay. I am sure nothing life-altering will unexpectedly happen.
-<dt><abbr title=Viatrix>V</abbr>
-<dd><i>*ZAP*</i>
-<dt><abbr title=CobyCat>C</abbr>
-<dd><i>surprised moth noises</i>
-<dt><abbr title=Altair>A</abbr>
-<dd>Did he get mothed?
-<dt><abbr title=CobyCat>C</abbr> (now with the username MobyMoth)
-<dd>I don't notice anything different.
-</dl>
+<p><abbr title=Altair>A</abbr>: I will turn you into a moth, Coby 😛
+<p><abbr title=Viatrix>V</abbr>: mothification
+<p><abbr title=Altair>A</abbr>: COMMENCE THE MOTHIFICATION
+<p><abbr title=Viatrix>V</abbr>: ok coby, for the subsequent several seconds stay standing in that spot... and pay no mind to the mothification ray which happens to be pointed at the very same spot...
+<p><abbr title=Altair>A</abbr>: Coby will be mothed
+<p><abbr title=CobyCat>C</abbr>: That seems like a suspiciously specific request, but okay. I am sure nothing life-altering will unexpectedly happen.
+<p><abbr title=Viatrix>V</abbr>: <i>*ZAP*</i>
+<p><abbr title=CobyCat>C</abbr>: <i>surprised moth noises</i>
+<p><abbr title=Altair>A</abbr>: Did he get mothed?
+<p><abbr title=CobyCat>C</abbr> (now with the username MobyMoth): I don't notice anything different.
