Attempted further accessibility

--- a/fun/moth/quotes.html
+++ b/fun/moth/quotes.html
@@ -28,8 +28,8 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 
 <h2 id=sMOTHer>The S<em>moth</em>ering of Altair</h2>
 <p><abbr title=Altair>A</abbr>: "It is I, the moth overlord!"
-<p><abbr title=Viatrix>V</abbr>: <audio controls src=viatrix1.mp3><a href=viatrix1.mp3>[Listen to audio]</a></audio>
-<br>"Who's the moth overlord~? Is it you~? Is it you~? Yes it is~! Moth overlord~! Moth moth moth~! Mothy."
+<p><abbr title=Viatrix>V</abbr>: <audio controls src=viatrix1.mp3 aria-describedby=smother-transcript><a href=viatrix1.mp3>[Listen to audio]</a></audio>
+<br><span id=smother-transcript>"Who's the moth overlord~? Is it you~? Is it you~? Yes it is~! Moth overlord~! Moth moth moth~! Mothy."</span>
 <p><abbr title=Altair>A</abbr>: Madam
 <br>You sound like a mom fr
 <br>Guys save me shes gonna take me out to Taco Bell
@@ -43,8 +43,8 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <br>sup leporidot
 <br>toderan
 <br>I can't spell
-<p><abbr title=Alec>Y</abbr>: behold
-<br><details><summary>Image</summary><img src=yuice.png alt=": [A drawing of a moth sitting in a full water bowl labelled &quot;YUICE&quot;.]" width=980 height=768></details>
+<div role=paragraph><abbr title=Alec>Y</abbr>: behold
+<br><details><summary>Image</summary><img src=yuice.png alt=": [A drawing of a moth sitting in a full water bowl labelled &quot;YUICE&quot;.]" width=980 height=768></details></div>
 <p><abbr title=Viatrix>V</abbr>: moth <strong>smol</strong>
 <p><abbr title=Altair>A</abbr>: It’s like a dog bowl lmao
 <p><abbr title=Alec>Y</abbr>: Exactly hahahahaha
@@ -61,8 +61,8 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <p><abbr title=Altair>A</abbr>: Oh well
 <br>I’m eating Alec’s pants
 <br>SKILL ISSUE
-<p><abbr title=Viatrix>V</abbr>: yum
-<br><details><summary>Image</summary><img src=eating-pants.png alt=": [A drawing of a moth at a table, holding a fork and knife, in front of a plate which has a pair of pants on it.]" width=640 height=480></details>
+<div role=paragraph><abbr title=Viatrix>V</abbr>: yum
+<br><details><summary>Image</summary><img src=eating-pants.png alt=": [A drawing of a moth at a table, holding a fork and knife, in front of a plate which has a pair of pants on it.]" width=640 height=480></details></div>
 <p><abbr title=Alec>Y</abbr>: CUTE
 <br>GOT THE PANT
 <br>READY TO GO
@@ -70,13 +70,13 @@ Humourous moth-related dialogue which has occurred. More may be added later…
 <p><abbr title=Viatrix>V</abbr>: now alphonse must draw the moth >:)
 <p><abbr title=Altair>A</abbr>: I can't draw
 <p><abbr title=Viatrix>V</abbr>: have you considered: doing it anyway
-<p><abbr title=Altair>A</abbr>: <details><summary>Image</summary><img src=mothspaint.png alt=": [A screenshot of Microsoft Paint, showing an image consisting only of the word &quot;Moth&quot;.]" width=1522 height=857><br></details>
+<div role=paragraph><abbr title=Altair>A</abbr>: <details><summary>Image</summary><img src=mothspaint.png alt=": [A screenshot of Microsoft Paint, showing an image consisting only of the word &quot;Moth&quot;.]" width=1522 height=857><br></details>
 I drew moth
-<br>😛
+<br>😛</div>
 <p><abbr title=Viatrix>V</abbr>: lol
 <p><abbr title=Altair>A</abbr>: I AM AN ARTIST NOW
-<p><abbr title=Alec>Y</abbr>: Assemble!!!!!
-<br><details><summary>Image</summary><img src=moth-composite.png alt=": [The previous three images composited together.]" width=2024 height=820></details>
+<div role=paragraph><abbr title=Alec>Y</abbr>: Assemble!!!!!
+<br><details><summary>Image</summary><img src=moth-composite.png alt=": [The previous three images composited together.]" width=2024 height=820></details></div>
 <p><abbr title=Altair>A</abbr>: lmfao
 <br>Moths assemble!
 <br>Guys my moth is the greatest one there don't @ me
