Attempted to make adblocker ad hidden by EasyList again

--- a/banner-ads/banner728x90.html
+++ b/banner-ads/banner728x90.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <title>uBlock Origin voluntary endorsement</title>
 <body style=margin:0;overflow:hidden>
-<img src=ad-blocker.png usemap=#map alt="No ad-blocker detected!
+<img src=../assets/ad-blocker.png usemap=#map alt="No ad-blocker detected!
 Woah there, friend! Are you surfing the web without an ad-blocker?
 Don't you know an ad-blocker stops annoying ads and malicious code?
 I, Viatrix the Internet Rando Extraordinaire, recommend uBlock Origin!
