--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a:not(:hover):not(:focus) + .moreinfo {left:-9999px;}
 .transring {background-color:#313063;border-color:#654c9e #242348 #242348 #654c9e;width:168px}
 #AdsDiv {position:sticky;top:0}
 </style>
-<aside id=AdsDiv><iframe src=assets/banner728x90.html width=728 height=90></iframe></aside>
+<aside id=AdsDiv><iframe src=banner-ads/banner728x90.html width=728 height=90></iframe></aside>
 <main>
 Welcome to the web site of...<br>
 <img src="assets/gayglove.jpg" alt width=530 height=500><br>
