--- a/cuddle/jukebox/index.html
+++ b/cuddle/jukebox/index.html
@@ -173,7 +173,7 @@ For best experience, use a browser which supports <b>inline frames</b> and <b>in
 </main>
 <footer class="jukebox-bottom jukebox-offs jukebox-smoltext">
 Last modified <time>2023-10-24</time>.
-<br><a href=https://bugs.webkit.org/show_bug.cgi?id=263630>Known to not work in WebKit-based browsers</a> such as Safari.
+<br><a href="https://bugs.webkit.org/show_bug.cgi?id=263630">Known to not work in WebKit-based browsers</a> such as Safari.
 <br><a href=/index.html>Return to Viatrix's home page</a>
 </footer>
 </div>
