Small moth day 2024 page

--- a/fun/moth/index.html
+++ b/fun/moth/index.html
@@ -152,12 +152,17 @@ When butterflies are at rest, their wings tend to point upward, while moths at r
 <li>Show appreciation to your nearest moth
 <li>Read a <a href=natalya-lobanova-moth-comic.html>Mother's Day comic</a>
 </ul>
+<h3>Mother's Day things I did</h3>
+<p>2022 was the year I first decided to moth on Mother's Day.
+<p>2023: I made the very webpage you're reading right now.
+<p>2024: I threw together a <a href=ers-day-2024.html>Mother's Day 2024 celebration page</a>.
 </article>
 <article>
 <h2 id=links>Moth Links</h2>
 <ul>
 <li><a href=quotes.html>Moth dialogues between myself and friends</a>
 <li><a href="https://www.youtube.com/embed/qGwnjFUHISU?rel=0&modestbranding=1">Disco moth (YouTube)</a>
+<li><a href=https://mailman.yale.edu/mailman/listinfo/leps-l>Lepidoptera Listserver</a>
 </ul>
 </article>
 </main>
