Fixed "Transing the Internet" webring widget.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ a:not(:hover):not(:focus) + .moreinfo {left:-9999px;}
 	font-family: "Comic Neue", "Atkinson Hyperlegible", sans-serif;
 }
 .cuddler-webring a {color:#303}
-.transring {background-color:#313063;border-color:#654c9e #242348 #242348 #654c9e;width:168px}
+.transring {background-color:#313063;border-color:#654c9e #242348 #242348 #654c9e;width:228px}
 #AdsDiv {position:sticky;top:0}
 </style>
 <aside id=AdsDiv><iframe src=banner-ads/banner728x90.html width=728 height=90></iframe></aside>
@@ -94,14 +94,9 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 </div>
 <iframe width=330 height=90 src="https://go.KIBI.family/WebRings/💀💖/embed/#/mincerafter42" sandbox="allow-scripts allow-same-origin allow-top-navigation" style="border:18pt solid;border-color:#f3ecff #c7c2d1 #c7c2d1 #f3ecff;background-color:#dedbd9;margin:8pt"></iframe>
 <div class="transring outset">
-<a href=https://transring.neocities.org><img src=assets/transring/webringbutton.png alt="Transing The Internet Webring" width=168 height=39 style=padding:2px></a><br>
-<iframe width=168 height=24 style=border:0 srcdoc="
-<style>body{margin:0;color:#fff;display:flex;justify-content:space-evenly}img{display:block}a:hover img,a:focus img{background-color:#ff28ff}</style><body>
-<noscript>But without Javascript, it's just a web list.</noscript>
-<script src=https://transring.neocities.org/onionring-variables.js></script>
-<script>var selfIndex = sites.indexOf('https://mincerafter42.github.io');
-document.write(`<a href='${sites[(selfIndex||sites.length)-1]}' target=_parent><img src=assets/transring/arrowleft.png alt='${ringName} previous'></a>`);
-document.write(`<a href='${sites[(selfIndex+1)%sites.length]}' target=_parent><img src=assets/transring/arrowright.png alt='${ringName} next'></a>`);</script>
+<iframe width=228 height=39 style=border:0 srcdoc="<body style=margin:0>
+<noscript><a href=https://transring.neocities.org><img src=assets/transring/webringbutton.png alt='Transing The Internet Webring' width=168 height=39 style=padding:2px></a></noscript>
+<script src=https://transring.neocities.org/ring.js></script>
 "></iframe>
 </div>
 </div>
