Attempt #2: Fixing the "Transing the Internet" webring widget.

--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@ Part of the <a href=https://cuddler-webring.netlify.app/>Cuddler Webring</a>!<br
 </div>
 <iframe width=330 height=90 src="https://go.KIBI.family/WebRings/💀💖/embed/#/mincerafter42" sandbox="allow-scripts allow-same-origin allow-top-navigation" style="border:18pt solid;border-color:#f3ecff #c7c2d1 #c7c2d1 #f3ecff;background-color:#dedbd9;margin:8pt"></iframe>
 <div class="transring outset">
-<iframe width=228 height=39 style=border:0 srcdoc="<body style=margin:0>
-<noscript><a href=https://transring.neocities.org><img src=assets/transring/webringbutton.png alt='Transing The Internet Webring' width=168 height=39 style=padding:2px></a></noscript>
-<script src=https://transring.neocities.org/ring.js></script>
-"></iframe>
+<iframe width=228 height=39 style=border:0 src=assets/transring.html></iframe>
 </div>
 </div>
 <aside>
